Scrolling to some anchors broken (charset issues).  Bug 190886, r+sr=dbaron, a=asa